--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NodeODM"]
 	path = NodeODM
 	url = https://github.com/OpenDroneMap/NodeODM.git
+[submodule "OpenSplat"]
+	path = OpenSplat
+	url = https://github.com/pierotofy/OpenSplat.git
