--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       - NODE_ENV=production
     restart: unless-stopped
+    networks:
+      - bridge_network
 
   opensplat:
     image: kawtech/oneshot:opensplat_latest
@@ -25,3 +27,30 @@ services:
         reservations:
           devices:
             - capabilities: [gpu]
+    networks:
+      - bridge_network
+
+  flaskapp:
+    build:
+      context: ./flask
+      dockerfile: Dockerfile
+    working_dir: /app
+    volumes:
+      - ./flask:/app
+      - /var/www/data:/var/www/data
+      - /var/run/docker.sock:/var/run/docker.sock  # Mount Docker socket
+    command: flask run --host=0.0.0.0
+    ports:
+      - "5000:5000"
+    environment:
+      - FLASK_ENV=development
+    depends_on:
+      - nodeodm
+      - opensplat
+    restart: unless-stopped
+    networks:
+      - bridge_network
+
+networks:
+  bridge_network:
+    driver: bridge
