--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -14,9 +14,17 @@ RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
     && echo "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list \
     && apt-get update && apt-get install -y docker-ce-cli
 
+# Copy requirements and install dependencies
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+# Ensure flask-cors is installed
+RUN pip install --no-cache-dir flask-cors
 
+# Copy the rest of the application code
 COPY . .
 
+# Expose the port the app runs on
+EXPOSE 5000
+
+# Define the command to run your app
 CMD ["flask", "run", "--host=0.0.0.0"]
