added node to start script, trying to fix import flask-cors

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -16,9 +16,9 @@ RUN curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
 
 # Copy requirements and install dependencies
 COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
 # Ensure flask-cors is installed
-RUN pip install --no-cache-dir flask-cors
+RUN pip3.9 install --no-cache-dir flask-cors==4.0.1
+RUN pip3.9 install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
 COPY . .
